# XAI_Navigation

./: .gitignore  =1.0.7  README.md  comparison_summary.md  eval_habitat.py  eval_habitat_grad_eclip_compatible.py  eval_habitat_multi.py  grad_map_test.py  habitat_test.py  habitat_test_single.py  habitat_test_weighted_single.py  hm3d  read_grad_eclip_results.py  read_results.py  read_results_multi.py  requirements.txt
config/: __init__.py  conf.py  controller_confs.py  eval_conf.py  grad_eclip_eval_conf.yaml  mapping_conf.py  planning_conf.py
config/mon/: base_conf_sim.yaml  base_conf_spot.yaml  controller_habitat.yaml  eval_conf.yaml  (+6 more)
eval/: __init__.py  actor.py  grad_eclip_actor.py  grad_eclip_evaluator.py  habitat_evaluator.py  habitat_multi_evaluator.py  habitat_utils.py
images/: README.md
mapping/: __init__.py  feature_map.py  navigator.py  rerun_logger.py  varying_blur.py
onemap_utils/: __init__.py  math_utils.py  vis_utils.py
planning/: __init__.py  controllers.py  planning_utils.py
planning_cpp/: CMakeLists.txt  dijkstra_test.py  djikstra.cpp  main.cpp  matrix_utils.h  py_impl.py  pyproject.toml
scripts/: analyze_grad_eclip_results.py
spot_utils/: __init__.py  setup_api.py  tcp_comm.py
vision_models/: JETSON_prepare_clip_dense.py  __init__.py  base_model.py  blip2_model.py  blip2_model_patched.py  clip_dense.py  coco_classes.py  grad_eclip_model.py  grad_eclip_softmax_model.py  grounding_dino_detector.py  ovseg_model.py  point_nav_policy.py  trt_yolo_world_detector.py  yolo_world_detector.py  yolov6_model.py  yolov7_model.py  yolov8_model.py
(+11 files in other folders)
